# unvme-cli

./: AUTHORS  CONTRIBUTING.md  CONTRIBUTORS  README.md  meson.build  meson_options.txt  unvme-cmds.c  unvme.c  unvme.h  unvmed-cmds.c  unvmed-file.c  unvmed-logs.c  unvmed-print.c  unvmed.c  unvmed.h
.github/workflows/: build-ubuntu.yml
app/fio/: README.md  fio.c  libunvmed-engine.c  meson.build
app/perf/: meson.build  perf.c
argtable3/: README.md  argtable3.c  meson.build
ccan/: meson.build
examples/: unvme-driver-basic.sh  unvme-enable-vf.sh  unvme-id-ns.sh  unvme-iopt-prp-err-injection.sh  unvme-iopt-prp-injection.sh  unvme-iopt-write-read-compare.sh  unvme-rand-rw.sh  unvme-read-qd-n.sh  unvme-reset.sh  unvme-seq-rw.sh  unvme-write-read-compare.sh  unvme-write-read-meta-compare.sh
examples/fio/: fio_mixed_write_mode.sh  fio_mixed_write_mode_verify.sh  fio_mps_sweep.sh  fio_n_to_1_queues.sh  fio_polling_mode.sh  fio_randread_perf.sh  fio_reset_test.sh  fio_verify_w_compare.sh  fio_w_delete_iosq.sh  fio_w_reset.sh
lib/: LICENSE  libunvmed-cmds.c  libunvmed-logs.c  libunvmed-logs.h  libunvmed-private.h  libunvmed-vcq.c  libunvmed.c  libunvmed.h  meson.build
src/: meson.build  unvme-cmds.c  unvme.c  unvme.h  unvmed-cmds.c  unvmed-file.c  unvmed-print.c  unvmed.c  unvmed.h
src/app/: meson.build
src/app/fio/: README.md  fio.c  libunvmed-engine.c  meson.build
src/app/perf/: perf.c  perf.h
